Added Bower package manager support

--- a/README.rdoc
+++ b/README.rdoc
@@ -15,7 +15,11 @@ Create a HTML navigation menu and sub-menus from JSON with ease.
 
 == Installation
 
-Download the latest {sources}[https://github.com/nuxy/EZ-Menu/tags] and refer to the {README}[https://labs.mbrooks.info/demos/EZ-Menu/README.html] for more information about this package.
+This package can be easily installed using Bower.
+
+    $ bower install ez-menu
+
+Please refer to the {README}[https://labs.mbrooks.info/demos/EZ-Menu/README.html] for more information about this package.
 
 == Author
 
