--- a/README.rdoc
+++ b/README.rdoc
@@ -15,7 +15,7 @@ Create a HTML navigation menu and sub-menus from JSON with ease.
 
 == Installation
 
-This package can be easily installed using Bower.
+This package can be easily installed using {Bower}[http://bower.io].
 
     $ bower install ez-menu
 
